[gd_scene load_steps=5 format=3 uid="uid://cgruh76ih0fre"]

[ext_resource type="Script" uid="uid://ksmwy7xe6dq7" path="res://Scripts/SheriffsBox/GameManager.gd" id="1_mmyeu"]
[ext_resource type="Script" uid="uid://g5eopkn8sin3" path="res://Scripts/SheriffsBox/DocumentsManager.gd" id="2_qq03t"]
[ext_resource type="Texture2D" uid="uid://bjtxt4yl8c80p" path="res://Assets/Placeholder/sino.png" id="3_bwwes"]
[ext_resource type="PackedScene" uid="uid://dhukukuvoevyi" path="res://Scenes/UI/InGame/Dialog.tscn" id="4_xhesm"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_mmyeu")

[node name="NPC Spawn Area" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 206.0
offset_top = 114.0
offset_right = 364.0
offset_bottom = 202.0
mouse_filter = 2

[node name="NPCGenerator" type="Node2D" parent="NPC Spawn Area"]

[node name="DocumentsManager" type="Node2D" parent="."]
script = ExtResource("2_qq03t")

[node name="Campainha" type="TextureButton" parent="."]
offset_left = 394.0
offset_top = 227.0
offset_right = 442.0
offset_bottom = 275.0
texture_normal = ExtResource("3_bwwes")
ignore_texture_size = true
stretch_mode = 0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Dialog" parent="UI" instance=ExtResource("4_xhesm")]
visible = false
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -319.0
offset_right = 284.0
offset_bottom = -246.0
grow_vertical = 0

[connection signal="pressed" from="Campainha" to="." method="nextNPC"]
